# heaphook

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  Versions  app.cpp  heaplog_parser.cpp  heaplog_parser.py  package.xml  preloaded.cpp  project_utils.cmake
.github/workflows/: build-and-test.yaml
include/heaphook/: heaphook.hpp  heaptracer.hpp  hook_types.hpp  utils.hpp
misc/: backtrace_analyzer.py  heaptrace_analyzer.py
src/: app.cpp  backtrace_allocator.cpp  my_allocator.cpp  original_allocator.cpp  preloaded.cpp  preloaded_tlsf.cpp  sbrk_reserved_allocator.cpp
src/heaphook/: heaphook.cpp  heaptracer.cpp  hook_functions.cpp  utils.cpp
src/tlsf/: tlsf.cpp
test/: test_allocator.cpp  test_heaphook.cpp  test_utils.cpp
